--- a/.github/workflows/pr-notify.yml
+++ b/.github/workflows/pr-notify.yml
@@ -8,6 +8,9 @@ jobs:
   slack_notify:
     runs-on: ubuntu-latest
     steps:
+      - uses: kceb/pull-request-url-action@v1
+        id: pr-url
+
       - name: Install Python and Dependencies
         run: |
           sudo apt-get install python3-pip
@@ -19,6 +22,7 @@ jobs:
           PR_URL: ${{ steps.pr-url.outputs.url }}
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+          URL: ${{ steps.pr-url.outputs.url }}
         run: |
           echo "
           import logging
@@ -34,7 +38,8 @@ jobs:
           try:
               result = client.chat_postMessage(
                   channel=channel_id, 
-                  text='New PR from $GITHUB_HEAD_REF to $GITHUB_BASE_REF'
+                  text='New PR from $GITHUB_HEAD_REF to $GITHUB_BASE_REF',
+                  attachments=[{"pretext": $GIT_LATEST_COMMIT_MESSAGE, "text": $URL}]
               )
               logger.info(result)
 
