--- a/.github/workflows/pr-notify.yml
+++ b/.github/workflows/pr-notify.yml
@@ -7,25 +7,31 @@ on:
 jobs:
   slack_notify:
     runs-on: ubuntu-latest
+
     steps:
+      - uses: actions/checkout@v3
+
       - uses: kceb/pull-request-url-action@v1
         id: pr-url
 
-      - run: echo "${{ steps.pr-url.outputs.url }}"
+      - run: echo "PR URL: ${{ steps.pr-url.outputs.url }}"
 
       - name: Install Python and Dependencies
         run: |
-          sudo apt-get install python3-pip
+          sudo apt-get update
+          sudo apt-get install -y python3-pip
           pip3 install slack_sdk
 
       - name: Send Notify
-
         env:
           PR_URL: ${{ steps.pr-url.outputs.url }}
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
           CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
           GITHUB_REPOSITORY: ${{ github.repository }}
           GITHUB_PR_NUMBER: ${{ github.event.number }}
+          GITHUB_HEAD_REF: ${{ github.head_ref }}
+          GITHUB_BASE_REF: ${{ github.base_ref }}
+          GITHUB_ACTOR: ${{ github.actor }}
         run: |
           echo "
           import logging
@@ -35,7 +41,10 @@ jobs:
 
           repository = os.environ.get('GITHUB_REPOSITORY')
           pr_number = os.environ.get('GITHUB_PR_NUMBER')
-          pr_link = f'https://github.com/{repository}/pull/{pr_number}'
+          pr_link = os.environ.get('PR_URL')
+          head_ref = os.environ.get('GITHUB_HEAD_REF')
+          base_ref = os.environ.get('GITHUB_BASE_REF')
+          actor = os.environ.get('GITHUB_ACTOR')
 
           client = WebClient(token=os.environ.get('SLACK_BOT_TOKEN'))
           logger = logging.getLogger(__name__)
@@ -44,9 +53,9 @@ jobs:
 
           try:
               result = client.chat_postMessage(
-                  channel=channel_id, 
-                  text='New PR from $GITHUB_HEAD_REF to $GITHUB_BASE_REF',
-                  attachments=[{"pretext": $GITHUB_ACTOR, "text": pr_link}]
+                  channel=channel_id,
+                  text=f'New PR from {head_ref} to {base_ref}',
+                  attachments=[{'pretext': f'Created by {actor}', 'text': pr_link}]
               )
               logger.info(result)
 
